<resources>
    <string name="app_name">Watching Soccer Online</string>
    <string name="home">Home</string>
    <string name="chart">Chart</string>
    <string name="setting">Setting</string>
    <string name="no_internet">No internet</string>
    <string name="mess_when_click_back_btn">Press again back button to exit</string>
    <string name="views">views</string>
    <string name="library">Library</string>
    <string name="watching">Watching</string>
    <string name="highlight">Highlight</string>
    <string name="comments">Comments</string>
    <string name="write_public_comment">Write public comment…</string>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="day">day</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="search_video">Search soccer video</string>
    <string name="notification">Notification</string>
    <string name="match_has_not_happened_yet">"The match hasn't happened yet "</string>
    <string name="due">Due</string>
    <string name="video_will_show">The video will be shown on</string>
    <string name="do_you_want_to_receive_noti_when_video_be_shown">Do you want to receive notifications when the video is shown?</string>
    <string name="unplayed_video">Unplayed video</string>
    <string name="get_notification">Get notification</string>
    <string name="cancel">Cancel</string>
    <string name="save_to_play_list">Save to play list</string>
    <string name="download">Download</string>
    <string name="remove_from_history">Remove from history</string>
    <string name="recently">Recently</string>
    <string name="video">Video</string>
    <string name="sign_in">Sign in</string>
    <string name="detail_no_internet">Watch downloaded videos or find new videos to download in your library</string>
    <string name="go_to_downloads">Go to downloads</string>
    <string name="your_download">Your downloads</string>
    <string name="ago">ago</string>
    <string name="remove_from_download">Remove from download</string>
    <string name="download_start">Download start</string>
    <string name="download_error">Has error when download</string>
    <string name="video_downloaded">Video downloaded</string>
    <string name="delete_download_success">Delete download success</string>
    <string name="delete_download_error">Has error when delete download</string>
    <string name="video_deleted">Video deleted</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="register">Register</string>
    <string name="loading_dialog">Loading. Please wait…</string>
    <string name="has_error_when_save_user">Has error when save user</string>
    <string name="sign_out">Sign out</string>
    <string name="has_error_when_sign_out">Has error when sign out</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_password_need_same_password">Repeat password need same password</string>
    <string name="email_need_at">Email need @</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_length">Email need than 6 word</string>
    <string name="email_cannot_be_spaces">Email cannot be spaces</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="password_length">Password need than 6 word</string>
    <string name="password_cannot_be_spaces">Password cannot be spaces</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="name_length">Name need than 1 word</string>
    <string name="birthday_need_before_present_time">Birthday needs before the present time</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="new_password">New password</string>
    <string name="remove_notification">Remove notification</string>
    <string name="remove_notification_success">Remove notification success</string>
    <string name="timeout">Request timeout, request again</string>
    <string name="email_invalid">Email invalid</string>
    <string name="has_error_when_register">Has error when register</string>
    <string name="choose_gallery">Choose gallery</string>
    <string name="open_camera">Open camera</string>
    <string name="delete_avatar">Delete avatar</string>
    <string name="review_avatar">Review avatar</string>
    <string name="upload_avatar">Upload avatar</string>
    <string name="upload_avatar_success">Upload avatar success</string>
    <string name="unlogin">Please login to continue</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="view">View</string>
    <string name="has_video_due">Has video due</string>
    <string name="download_success">Download success</string>
</resources>